Delete CreditBootApplicationTest and migrated JUnit 4 to JUnit 5